refactor code. category create with it's attributes
