# backend/internal/transport/http/routes/category_routes_admin.go
@@ -1,21 +1,16 @@
 package route
 
 import (
-	"github.com/Neimess/zorkin-store-project/internal/transport/http/restHTTP"
+	categoryH "github.com/Neimess/zorkin-store-project/internal/transport/http/restHTTP/category"
 	"github.com/go-chi/chi/v5"
 )
 
-func registerCategoryAdminRoutes(r chi.Router, h *restHTTP.CategoryHandler, cah *restHTTP.CategoryAttributeHandler) {
+func registerCategoryAdminRoutes(r chi.Router, h *categoryH.CategoryHandler) {
 	r.Route("/category", func(r chi.Router) {
-		r.Post("/", h.Create)
+		r.Post("/", h.CreateCategory)
 		r.Put("/{id}", h.Update)
 		r.Delete("/{id}", h.Delete)
-
-		r.Route("/{categoryID}/attribute", func(r chi.Router) {
-			r.Get("/", cah.GetByCategory)
-			r.Post("/", cah.Create)
-			r.Put("/{attributeID}", cah.Update)
-			r.Delete("/{attributeID}", cah.Delete)
-		})
+		r.Get("/{id}", h.Get)
+		r.Get("/", h.List)
 	})
 }
